# energo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  update-dashboard.yml
docs/: app.js  index.html  style.css
docs/data/: compare.json  forecast_12.json  forecast_24.json  forecast_48.json  market.json  schedule_example.json
scripts/: refresh.py  simulate.py  train.py
src/energo/: __init__.py
src/energo/dashboard/: __init__.py  __main__.py  app.py
src/energo/dashboard/static/: app.js  style.css
src/energo/dashboard/templates/: index.html
src/energo/data/: __init__.py  pipeline.py  refresh.py
src/energo/data/providers/: base.py  jepx.py  weather.py
src/energo/evaluation/: __init__.py  backtest.py  metrics.py
src/energo/features/: engineering.py  scaler.py
src/energo/mcp/: __init__.py  __main__.py  server.py
src/energo/models/: __init__.py  parametric.py  predictor.py  trainer.py
src/energo/scheduler/: __init__.py  constraints.py  cost.py  optimizer.py  report.py  simulator.py  workload.py
tests/integration/: test_pipeline.py  test_scheduler_e2e.py
tests/unit/: test_backtest.py  test_cost.py  test_features.py  test_jepx_provider.py  test_mcp_server.py  test_metrics.py  test_model.py  test_optimizer.py  test_predictor.py  test_scaler.py  test_trainer.py  test_workload.py
