[project]
name = "energo"
version = "0.1.0"
description = "Energy-Compute Co-Optimizer: ML-powered electricity price forecasting for AI workload scheduling"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "fastmcp>=3.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["energo"]
